Add rectangle- .hpp and .cpp to CMakeLists.txt

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -6,6 +6,7 @@ add_executable(example
   vec2.cpp
   mat2.cpp
   circle.cpp
+  rectangle.cpp
   )
 target_link_libraries(example
   glfw
@@ -22,6 +23,7 @@ add_executable(tests
   vec2.cpp
   mat2.cpp
   circle.cpp
+  rectangle.cpp
   )
 target_link_libraries(tests
   glfw
